--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -74,8 +74,8 @@
                                         action="{{ url_for('profile.remove_stocks_preferences', username=username) }}">
                                         <input type="hidden" name="stocks" value="{{ stock.symbol }}">
                                             <button type="submit" class="tooltip-css tp-text-right border-0 m-0 p-0 link-button">
-                                                <span class="tooltiptext-css tp-text-right link-button fw-light">Remove</span>
-                                                <span class=><i class="fas fa-trash"></i></span>
+                                                <span class="tooltiptext-css tp-text-right fw-light">Remove</span>
+                                                <span class=><i class="fas fa-trash link-button"></i></span>
                                             </button>
                                     </form>
                                 </div>
