--- a/src/templates/stocks_news.html
+++ b/src/templates/stocks_news.html
@@ -37,7 +37,7 @@
 					</select>
 					<!-- Build selection box for the stocks -->
 					<select name="stocks" class="form-select" aria-label="Default select example">
-						{% for stock in preferences.stocks %}
+						{% for stock in stocks %}
 							{% set symbol = stock['symbol'] %} {% set name
 							= stock['name'] %} {% if selected_symbol == symbol %}
 							<option value="{{ symbol }}" selected>{{ symbol }} - {{ name }}</option>
