Set up basic terms as resources file.

--- a/src/templates/stocks_news.html
+++ b/src/templates/stocks_news.html
@@ -21,7 +21,18 @@
 	<hr>
 	<div class="d-md-flex gap-2">
 		<div class="col-7">
-			Resources
+			<div>{{ resources["title"]}}</div>
+			<div class="media">
+			<video src="https://www.youtube.com/playlist?list=PLk9v2_m7w8Wgj0BLSYqPaVjGKz3_qhMTQ" class="object-fit-contain" autoplay="False"></video>
+		</div>
+		<div>
+			
+		</div>
+<!-- <video src="..." class="object-fit-cover" autoplay></video>
+<video src="..." class="object-fit-fill" autoplay></video>
+<video src="..." class="object-fit-scale" autoplay></video>
+<video src="..." class="object-fit-none" autoplay></video> -->
+			<div></div>
 		</div>
 		<div col="col-5">
 			<form class="my-2" method="POST">
