Cleaned up code

--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -12,7 +12,7 @@
 	</div>
 	<br>
 	<div class="row">
-		Logged in : <strong>{{session.name}} | <a href="{{ url_for('auth.login') }}"> Logout</a>
+		Logged in : <strong>{{session.name}}</strong> | <a href="{{ url_for('auth.login') }}"> Logout</a>
 	</div>
 	<br><br>
 	<div class="row">
